# nos

./: .gdbinit  Cargo.toml  Makefile  README.md  os.asm  os.sym
.cargo/: config
src/: batch.rs  config.rs  console.rs  cpu.rs  entry.s  kalloc.rs  lang_items.rs  link_app.s  linker.ld  main.rs  memlayout.rs  page_alloc.rs  riscv.rs  sbi.rs  thread.rs  utils.rs  vm.rs
src/cow/: mod.rs
src/filesystem/: fs.rs  inode.rs  mod.rs  stdio.rs
src/sync/: mod.rs  spin.rs  up.rs
src/syscall/: fs.rs  mod.rs  process.rs
src/task/: manager.rs  mod.rs  switch.rs  switch.s  task.rs
src/trap/: context.rs  kernelvec.s  ktrap.rs  mod.rs  trampoline.s
user/: Cargo.toml  Makefile
