[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
easy-fs = { path = "../rCore-Tutorial-v3/easy-fs" }
buddy_system_allocator = "0.6"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
xmas-elf = "0.7.0"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
[features]
debug = []